--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,51 @@
 plugins {
-    id 'java'
-    id "org.sonarqube" version "2.7"
+    id 'org.sonarqube' version "2.7"
 }
 
 group 'org.contentcreator.cathedra'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.11
-targetCompatibility = 1.11
+subprojects {
 
-repositories {
-    mavenCentral()
-}
+    apply plugin: 'java'
+    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    repositories {
+        mavenLocal()
+        maven {
+            url = 'https://repository.klauke-enterprises.com/repository/maven-releases/'
+        }
+
+        maven {
+            url = 'https://repository.klauke-enterprises.com/repository/maven-snapshots/'
+        }
+
+        maven {
+            url = 'http://repo.maven.apache.org/maven2'
+        }
+    }
+
+    publishing {
+        publications {
+            maven(MavenPublication) {
+                from(project(':cathedra-server').components.java)
+            }
+        }
+
+        repositories {
+
+            maven {
+
+                def releasesRepoUrl = 'https://repository.klauke-enterprises.com/repository/maven-releases/'
+                def snapshotsRepoUrl = 'https://repository.klauke-enterprises.com/repository/maven-snapshots/'
+                url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+
+                credentials {
+                    username = System.getenv('NEXUS_USERNAME')
+                    password = System.getenv('NEXUS_PASSWORD')
+                }
+            }
+        }
+    }
 }
